[package]
name = "cutools"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/qy3u/cutools"
homepage = "https://github.com/qy3u/cutools"
documentation = "https://github.com/qy3u/cutools"
description = "cutools"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.51"
log = { version = "0.4.14", optional = true }
lazy_static = { version = "1.4.0", optional = true }
waitpool = { version = "0.2.0", optional = true}

[build-dependencies]
cc = "1.0.72"
which = "^4.0"


[features]
default = ["stream-per-thread"]
global-stream = ["lazy_static", "waitpool"]
cache-buffer = ["lazy_static"]
stream-per-thread = []
trace = ["log"]
